--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
   "extends": "airbnb-base",
-  "ignorePatterns": ["public"]
+  "ignorePatterns": ["public"],
+  "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
 }
